now-using-iptables.rules
#来自不同IP的数据包转发到不同的目的地址

# Generated by iptables-save v1.4.21 on Wed Dec 21 04:46:06 2016
*raw
:PREROUTING ACCEPT [327110562:250139668313]
:OUTPUT ACCEPT [215399042:227343262133]
COMMIT
# Completed on Wed Dec 21 04:46:06 2016
# Generated by iptables-save v1.4.21 on Wed Dec 21 04:46:06 2016
*nat
:PREROUTING ACCEPT [286:16094]
:INPUT ACCEPT [147:8388]
:OUTPUT ACCEPT [109:7313]
:POSTROUTING ACCEPT [109:7313]
-A PREROUTING -s 202.153.204.195/32 -i eth0 -p tcp -m tcp --dport 444 -j DNAT --to-destination 120.25.131.13:443
-A PREROUTING -s 202.153.206.141/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 220.243.236.209:443
-A PREROUTING -s 203.66.0.73/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 220.243.236.209:443
-A PREROUTING -s 202.153.204.195/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 220.243.236.209:443
-A PREROUTING -s 203.66.0.143/32 -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 220.243.236.209:443
-A POSTROUTING -p tcp -m tcp --dport 444 -j MASQUERADE
-A POSTROUTING -p tcp -m tcp --dport 443 -j MASQUERADE
COMMIT
# Completed on Wed Dec 21 04:46:06 2016
# Generated by iptables-save v1.4.21 on Wed Dec 21 04:46:06 2016
*mangle
:PREROUTING ACCEPT [330675394:253158047559]
:INPUT ACCEPT [290476860:239212695118]
:FORWARD ACCEPT [40198534:13945352441]
:OUTPUT ACCEPT [218040498:230245655543]
:POSTROUTING ACCEPT [258238771:244190992968]
-A PREROUTING -j MARK --set-xmark 0x14/0xffffffff
-A POSTROUTING -p tcp -m tcp --sport 22 -j MARK --set-xmark 0xa/0xffffffff
-A POSTROUTING -p tcp -m tcp --sport 22 -j RETURN
-A POSTROUTING -j MARK --set-xmark 0x14/0xffffffff
COMMIT
# Completed on Wed Dec 21 04:46:06 2016
# Generated by iptables-save v1.4.21 on Wed Dec 21 04:46:06 2016
*filter
:INPUT DROP [19:1291]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2:120]
:fail2ban-ssh - [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A FORWARD -d 220.243.236.209/32 -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 120.25.131.13/32 -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A fail2ban-ssh -s 116.31.116.30/32 -j REJECT --reject-with icmp-port-unreachable
-A fail2ban-ssh -j RETURN
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -j ufw-user-output
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j DROP
-A ufw-skip-to-policy-input -j DROP
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 22 -j ACCEPT
-A ufw-user-input -s 203.66.0.64/26 -p tcp -m tcp --dport 80 -j ACCEPT
-A ufw-user-input -s 203.66.0.64/26 -p udp -m udp --dport 80 -j ACCEPT
-A ufw-user-input -s 202.153.204.192/29 -p tcp -m tcp --dport 80 -j ACCEPT
-A ufw-user-input -s 202.153.204.192/29 -p udp -m udp --dport 80 -j ACCEPT
-A ufw-user-input -s 202.153.206.136/29 -p tcp -m tcp --dport 80 -j ACCEPT
-A ufw-user-input -s 202.153.206.136/29 -p udp -m udp --dport 80 -j ACCEPT
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
-A ufw-user-logging-forward -j RETURN
-A ufw-user-logging-input -j RETURN
-A ufw-user-logging-output -j RETURN
COMMIT
# Completed on Wed Dec 21 04:46:06 2016
